antlr/src/main/java/org/example/antlr/sequence/Sequence.g4
grammar Sequence;

file: group+ ;

group: INT sequence[$INT.int] ;

sequence[int n]
locals [int i = 1;]
    : ( {$i <= $n}? INT {$i++;})*    //匹配N个整数
    ;

INT: [0-9]+ ;
WS : [ \t\n\r]+ -> skip ;
